--- a/index.html
+++ b/index.html
@@ -3,42 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio | Creative & Tech</title>
+    <title>Marvs Portfolio | Creative Marketing</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">PORTFOLIO</div>
+            <div class="logo">MARVS.DESIGN</div>
             <ul>
-                <li><a href="#work">Projects</a></li>
-                <li><a href="#tech">Tech Specs</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#work">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="mailto:your-email@gmail.com">Hire Me</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Creative Content & Tech Enthusiast</h1>
-        <p>Specialize in Visual Design, Marketing Assets, and PC Hardware Specs.</p>
+        <h1>Creative Content & Marketing Visuals</h1>
+        <p>Expertise in Tech Hardware, Layout Design, and Social Media Branding.</p>
     </section>
 
-    <section id="work" class="grid-container">
-        <h2>Visual & Marketing Projects</h2>
+    <section id="work" class="portfolio-section">
+        <h2 class="section-title">Client Projects</h2>
         <div class="grid">
-            <div class="card"><h3>Social Media Assets</h3><p>Designs for various brands.</p></div>
-            <div class="card"><h3>Packaging Design</h3><p>Dielines and product layouts.</p></div>
-            <div class="card"><h3>Marketing Captions</h3><p>AI-assisted copy for tech brands.</p></div>
+            <div class="card">
+                <div class="card-img">Ovation (OVA)</div>
+                <h3>Ovation Tech</h3>
+                <p>Social media assets and marketing visuals for PC hardware.</p>
+                <a href="#" class="btn">View Layouts</a>
+            </div>
+
+            <div class="card">
+                <div class="card-img">Storm Storage</div>
+                <h3>Storm Storage</h3>
+                <p>Branding and product showcase for storage solutions.</p>
+                <a href="#" class="btn">View Work</a>
+            </div>
+
+            <div class="card">
+                <div class="card-img">CZ8</div>
+                <h3>CZ8 Resto Bar</h3>
+                <p>Digital menus and social media promotional materials.</p>
+                <a href="#" class="btn">View Designs</a>
+            </div>
+            
+             <div class="card">
+                <div class="card-img">WBridges</div>
+                <h3>WBridges Manpower</h3>
+                <p>Recruitment agency marketing and visual content.</p>
+                <a href="#" class="btn">View Assets</a>
+            </div>
         </div>
     </section>
 
-    <section id="tech" class="tech-section">
-        <h2>PC Hardware Expertise</h2>
-        <p>In-depth knowledge of AIO, SSDs, RAM, and PSU troubleshooting.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2026 | Let's build something great.</p>
+    <footer id="about">
+        <p>Born in 1994 | Tech Enthusiast | Content Creator</p>
+        <p>&copy; 2026 Marvs Portfolio</p>
     </footer>
 </body>
 </html>
