--- a/index.html
+++ b/index.html
@@ -3,62 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvs Portfolio | Creative Marketing</title>
+    <title>Marvz Creatives | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">MARVS.DESIGN</div>
+            <div class="logo">MARVZ CREATIVES</div>
             <ul>
-                <li><a href="#work">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="mailto:your-email@gmail.com">Hire Me</a></li>
+                <li><a href="#projects">Work</a></li>
+                <li><a href="mailto:your-email@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Creative Content & Marketing Visuals</h1>
-        <p>Expertise in Tech Hardware, Layout Design, and Social Media Branding.</p>
+        <h1>Creative Design & Visual Solutions</h1>
+        <p>Specializing in Branding, Layout Design, and Social Media Content.</p>
     </section>
 
-    <section id="work" class="portfolio-section">
-        <h2 class="section-title">Client Projects</h2>
+    <section id="projects" class="portfolio-section">
+        <h2 class="section-title">Design Portfolio</h2>
         <div class="grid">
-            <div class="card">
-                <div class="card-img">Ovation (OVA)</div>
-                <h3>Ovation Tech</h3>
-                <p>Social media assets and marketing visuals for PC hardware.</p>
-                <a href="#" class="btn">View Layouts</a>
-            </div>
-
-            <div class="card">
-                <div class="card-img">Storm Storage</div>
-                <h3>Storm Storage</h3>
-                <p>Branding and product showcase for storage solutions.</p>
-                <a href="#" class="btn">View Work</a>
-            </div>
-
-            <div class="card">
-                <div class="card-img">CZ8</div>
-                <h3>CZ8 Resto Bar</h3>
-                <p>Digital menus and social media promotional materials.</p>
-                <a href="#" class="btn">View Designs</a>
-            </div>
             
-             <div class="card">
-                <div class="card-img">WBridges</div>
-                <h3>WBridges Manpower</h3>
-                <p>Recruitment agency marketing and visual content.</p>
-                <a href="#" class="btn">View Assets</a>
+            <div class="card">
+                <div class="card-img-placeholder">OVATION</div>
+                <h3>Ovation (OVA)</h3>
+                <p>Social Media Layouts & Visual Assets</p>
+                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
             </div>
+
+            <div class="card">
+                <div class="card-img-placeholder">STORM</div>
+                <h3>Storm Storage</h3>
+                <p>Product Showcase & Branding</p>
+                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+            </div>
+
+            <div class="card">
+                <div class="card-img-placeholder">CZ8</div>
+                <h3>CZ8 Resto Bar</h3>
+                <p>Marketing Materials & Menu Design</p>
+                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+            </div>
+
+            <div class="card">
+                <div class="card-img-placeholder">WBRIDGES</div>
+                <h3>WBridges Manpower</h3>
+                <p>Recruitment Content & Layouts</p>
+                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+            </div>
+
         </div>
     </section>
 
-    <footer id="about">
-        <p>Born in 1994 | Tech Enthusiast | Content Creator</p>
-        <p>&copy; 2026 Marvs Portfolio</p>
+    <footer>
+        <p>&copy; 2026 Marvz Creatives. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
