--- a/index.html
+++ b/index.html
@@ -3,62 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvz Creatives | Portfolio</title>
+    <title>Marvz Creatives | Selected Works</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">MARVZ CREATIVES</div>
-            <ul>
-                <li><a href="#projects">Work</a></li>
-                <li><a href="mailto:your-email@gmail.com">Contact</a></li>
-            </ul>
+            <div class="logo">MARVZ<span>CREATIVES</span></div>
+            <div class="nav-links">
+                <a href="#work">Selected Works</a>
+                <a href="mailto:your-email@gmail.com" class="contact-btn">Get in Touch</a>
+            </div>
         </nav>
     </header>
 
     <section class="hero">
-        <h1>Creative Design & Visual Solutions</h1>
-        <p>Specializing in Branding, Layout Design, and Social Media Content.</p>
+        <div class="hero-content">
+            <h1>Visual Storyteller & Designer</h1>
+            <p>Crafting high-impact visuals and marketing assets for brands worldwide.</p>
+        </div>
     </section>
 
-    <section id="projects" class="portfolio-section">
-        <h2 class="section-title">Design Portfolio</h2>
-        <div class="grid">
-            
-            <div class="card">
-                <div class="card-img-placeholder">OVATION</div>
-                <h3>Ovation (OVA)</h3>
-                <p>Social Media Layouts & Visual Assets</p>
-                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+    <section id="work" class="work-grid">
+        <div class="project-card">
+            <div class="project-image">
+                <span class="placeholder-text">Project One Visual</span>
             </div>
-
-            <div class="card">
-                <div class="card-img-placeholder">STORM</div>
-                <h3>Storm Storage</h3>
-                <p>Product Showcase & Branding</p>
-                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+            <div class="project-info">
+                <h3>Visual Design Concept</h3>
+                <p>Branding • Layout • Social Media</p>
+                <a href="#" class="view-link">View Case Study →</a>
             </div>
+        </div>
 
-            <div class="card">
-                <div class="card-img-placeholder">CZ8</div>
-                <h3>CZ8 Resto Bar</h3>
-                <p>Marketing Materials & Menu Design</p>
-                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+        <div class="project-card">
+            <div class="project-image">
+                <span class="placeholder-text">Project Two Visual</span>
             </div>
-
-            <div class="card">
-                <div class="card-img-placeholder">WBRIDGES</div>
-                <h3>WBridges Manpower</h3>
-                <p>Recruitment Content & Layouts</p>
-                <a href="LINK_DITO" target="_blank" class="btn">View Project</a>
+            <div class="project-info">
+                <h3>Marketing Campaign</h3>
+                <p>Digital Assets • Creative Direction</p>
+                <a href="#" class="view-link">View Case Study →</a>
             </div>
+        </div>
 
+        <div class="project-card">
+            <div class="project-image">
+                <span class="placeholder-text">Project Three Visual</span>
+            </div>
+            <div class="project-info">
+                <h3>Identity Branding</h3>
+                <p>Logo • Typography • Assets</p>
+                <a href="#" class="view-link">View Case Study →</a>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2026 Marvz Creatives. All Rights Reserved.</p>
+        <p>MARVZ CREATIVES &copy; 2026</p>
     </footer>
 </body>
 </html>
