--- a/index.html
+++ b/index.html
@@ -3,64 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvz Creatives | Selected Works</title>
+    <title>Marvz Creatives</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">MARVZ<span>CREATIVES</span></div>
-            <div class="nav-links">
-                <a href="#work">Selected Works</a>
-                <a href="mailto:your-email@gmail.com" class="contact-btn">Get in Touch</a>
-            </div>
-        </nav>
-    </header>
+    <nav>
+        <div class="logo">MARVZ<span>CREATIVES</span></div>
+        <div class="nav-links">
+            <a href="#">Work</a>
+            <a href="#" class="btn-contact">Contact</a>
+        </div>
+    </nav>
 
     <section class="hero">
-        <div class="hero-content">
-            <h1>Visual Storyteller & Designer</h1>
-            <p>Crafting high-impact visuals and marketing assets for brands worldwide.</p>
-        </div>
+        <h1>Visual Storyteller & Designer</h1>
+        <p>Crafting high-impact visuals and marketing assets.</p>
     </section>
 
-    <section id="work" class="work-grid">
+    <section class="work-grid">
         <div class="project-card">
-            <div class="project-image">
-                <span class="placeholder-text">Project One Visual</span>
-            </div>
-            <div class="project-info">
-                <h3>Visual Design Concept</h3>
-                <p>Branding • Layout • Social Media</p>
-                <a href="#" class="view-link">View Case Study →</a>
-            </div>
+            <div class="img-box">Project 1</div>
+            <h3>Creative Layout</h3>
+            <p>Branding • Social Media</p>
         </div>
-
         <div class="project-card">
-            <div class="project-image">
-                <span class="placeholder-text">Project Two Visual</span>
-            </div>
-            <div class="project-info">
-                <h3>Marketing Campaign</h3>
-                <p>Digital Assets • Creative Direction</p>
-                <a href="#" class="view-link">View Case Study →</a>
-            </div>
-        </div>
-
-        <div class="project-card">
-            <div class="project-image">
-                <span class="placeholder-text">Project Three Visual</span>
-            </div>
-            <div class="project-info">
-                <h3>Identity Branding</h3>
-                <p>Logo • Typography • Assets</p>
-                <a href="#" class="view-link">View Case Study →</a>
-            </div>
+            <div class="img-box">Project 2</div>
+            <h3>Marketing Assets</h3>
+            <p>Digital Design • Layout</p>
         </div>
     </section>
-
-    <footer>
-        <p>MARVZ CREATIVES &copy; 2026</p>
-    </footer>
 </body>
 </html>
