--- a/index.html
+++ b/index.html
@@ -3,34 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marvz Creatives</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Creative Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+        body { font-family: 'Poppins', sans-serif; scroll-behavior: smooth; }
+        .gradient-text {
+            background: linear-gradient(90deg, #6366f1, #a855f7, #ec4899);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .project-card:hover .project-overlay { opacity: 1; }
+    </style>
 </head>
-<body>
-    <nav>
-        <div class="logo">MARVZ<span>CREATIVES</span></div>
-        <div class="nav-links">
-            <a href="#">Work</a>
-            <a href="#" class="btn-contact">Contact</a>
+<body class="bg-slate-900 text-white">
+
+    <nav class="fixed w-full z-50 bg-slate-900/80 backdrop-blur-md border-b border-slate-800">
+        <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="text-2xl font-bold gradient-text underline decoration-indigo-500">PORTFOLIO.</div>
+            <div class="space-x-8 hidden md:flex">
+                <a href="#about" class="hover:text-indigo-400 transition">About</a>
+                <a href="#experience" class="hover:text-indigo-400 transition">Experience</a>
+                <a href="#projects" class="hover:text-indigo-400 transition">Projects</a>
+                <a href="#contact" class="px-5 py-2 bg-indigo-600 rounded-full hover:bg-indigo-500 transition">Contact</a>
+            </div>
         </div>
     </nav>
 
-    <section class="hero">
-        <h1>Visual Storyteller & Designer</h1>
-        <p>Crafting high-impact visuals and marketing assets.</p>
+    <section class="h-screen flex items-center justify-center text-center px-6">
+        <div class="max-w-3xl">
+            <h2 class="text-indigo-400 font-semibold tracking-widest uppercase mb-4">Content Creator & Designer</h2>
+            <h1 class="text-5xl md:text-7xl font-bold mb-6">Visualizing ideas into <span class="gradient-text">Digital Reality</span></h1>
+            <p class="text-slate-400 text-lg mb-8 leading-relaxed">
+                Expert in marketing content, AI visuals, and technical design. Turning complex concepts into aesthetic masterpieces.
+            </p>
+            <a href="#projects" class="inline-block border border-indigo-500 text-indigo-500 px-8 py-3 rounded-full hover:bg-indigo-500 hover:text-white transition duration-300">View My Work</a>
+        </div>
     </section>
 
-    <section class="work-grid">
-        <div class="project-card">
-            <div class="img-box">Project 1</div>
-            <h3>Creative Layout</h3>
-            <p>Branding • Social Media</p>
-        </div>
-        <div class="project-card">
-            <div class="img-box">Project 2</div>
-            <h3>Marketing Assets</h3>
-            <p>Digital Design • Layout</p>
+    <section id="experience" class="py-24 bg-slate-800/50">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-3xl font-bold mb-12 text-center">Work <span class="text-indigo-500">History</span></h2>
+            
+            <div class="grid md:grid-cols-2 gap-8">
+                <div class="p-8 bg-slate-900 rounded-2xl border border-slate-700 hover:border-indigo-500 transition shadow-xl">
+                    <span class="text-indigo-400 text-sm font-mono">Present</span>
+                    <h3 class="text-xl font-bold mt-2 text-white">Company Name 1</h3>
+                    <p class="text-slate-400 mt-4 leading-relaxed">
+                        Dito mo ilalagay yung role mo boss at kung anong ginagawa mo. Halimbawa: "Lead Visual Designer for tech marketing materials."
+                    </p>
+                </div>
+                <div class="p-8 bg-slate-900 rounded-2xl border border-slate-700 hover:border-indigo-500 transition shadow-xl">
+                    <span class="text-slate-500 text-sm font-mono">2023 - 2024</span>
+                    <h3 class="text-xl font-bold mt-2 text-white">Previous Company 2</h3>
+                    <p class="text-slate-400 mt-4 leading-relaxed">
+                        I-explain mo rito yung highlight ng projects mo nung nasa company ka na 'to. Solid na credentials 'to boss.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <section id="projects" class="py-24">
+        <div class="max-w-6xl mx-auto px-6">
+            <div class="flex justify-between items-end mb-12">
+                <div>
+                    <h2 class="text-3xl font-bold">Featured <span class="text-indigo-500">Projects</span></h2>
+                    <p class="text-slate-400 mt-2">Selection of my favorite work.</p>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="project-card relative group overflow-hidden rounded-xl bg-slate-800 aspect-video md:aspect-square">
+                    <img src="https://via.placeholder.com/600x600" alt="Project 1" class="w-full h-full object-cover group-hover:scale-110 transition duration-500">
+                    <div class="project-overlay absolute inset-0 bg-indigo-900/90 flex flex-col justify-center items-center opacity-0 transition duration-300 p-6 text-center">
+                        <h4 class="text-xl font-bold">Brand Design</h4>
+                        <p class="text-sm text-indigo-200 mt-2">Marketing materials and visual identity for tech brands.</p>
+                    </div>
+                </div>
+
+                <div class="project-card relative group overflow-hidden rounded-xl bg-slate-800 aspect-video md:aspect-square">
+                    <img src="https://via.placeholder.com/600x600" alt="Project 2" class="w-full h-full object-cover group-hover:scale-110 transition duration-500">
+                    <div class="project-overlay absolute inset-0 bg-purple-900/90 flex flex-col justify-center items-center opacity-0 transition duration-300 p-6 text-center">
+                        <h4 class="text-xl font-bold">Product Packaging</h4>
+                        <p class="text-sm text-purple-200 mt-2">Dieline design and mockups for PC components.</p>
+                    </div>
+                </div>
+
+                <div class="project-card relative group overflow-hidden rounded-xl bg-slate-800 aspect-video md:aspect-square">
+                    <img src="https://via.placeholder.com/600x600" alt="Project 3" class="w-full h-full object-cover group-hover:scale-110 transition duration-500">
+                    <div class="project-overlay absolute inset-0 bg-pink-900/90 flex flex-col justify-center items-center opacity-0 transition duration-300 p-6 text-center">
+                        <h4 class="text-xl font-bold">Social Media Content</h4>
+                        <p class="text-sm text-pink-200 mt-2">Engaging visuals and layout for agency growth.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="py-24 bg-indigo-600">
+        <div class="max-w-4xl mx-auto px-6 text-center">
+            <h2 class="text-4xl font-bold mb-6 italic">Ready to start a project?</h2>
+            <p class="text-indigo-100 text-xl mb-10">I'm currently available for freelance work and collaboration.</p>
+            <div class="flex justify-center space-x-6 text-3xl">
+                <a href="#" class="hover:text-slate-900 transition"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="hover:text-slate-900 transition"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="hover:text-slate-900 transition"><i class="fas fa-envelope"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-10 border-t border-slate-800 text-center text-slate-500 text-sm">
+        <p>&copy; 2026. Made with passion.</p>
+    </footer>
+
 </body>
 </html>
