--- a/index.html
+++ b/index.html
@@ -120,3 +120,29 @@
 
 </body>
 </html>
+<section class="min-h-screen flex items-center justify-center px-6 pt-20">
+        <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-12 items-center">
+            
+            <div class="text-center md:text-left order-2 md:order-1">
+                <h2 class="text-indigo-400 font-semibold tracking-widest uppercase mb-4">Content Creator & Designer</h2>
+                <h1 class="text-5xl md:text-7xl font-bold mb-6">Visualizing ideas into <span class="gradient-text">Digital Reality</span></h1>
+                <p class="text-slate-400 text-lg mb-8 leading-relaxed">
+                    Expert in marketing content, AI visuals, and technical design. Turning complex concepts into aesthetic masterpieces.
+                </p>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
+                    <a href="#projects" class="inline-block border border-indigo-500 text-indigo-500 px-8 py-3 rounded-full hover:bg-indigo-500 hover:text-white transition duration-300 text-center">View My Work</a>
+                    <a href="#contact" class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full hover:bg-indigo-500 transition duration-300 text-center">Hire Me</a>
+                </div>
+            </div>
+
+            <div class="order-1 md:order-2 flex justify-center">
+                <div class="relative group">
+                    <div class="absolute -inset-1 bg-gradient-to-r from-indigo-500 to-pink-500 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
+                    
+                    <img src="LINK_NG_PICTURE_MO_RITO.jpg" alt="Your Name" 
+                         class="relative w-64 h-64 md:w-80 md:h-80 object-cover rounded-2xl border-2 border-slate-700 shadow-2xl grayscale hover:grayscale-0 transition duration-500">
+                </div>
+            </div>
+
+        </div>
+    </section>
